# YTalk

./: .gitignore  README.md  test.cpp
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/ytalk/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/ytalk/: MainActivity.java  MyApplication.java
android/app/src/main/java/com/example/ytalk/activities/: BaseActivity.java
android/app/src/main/java/com/example/ytalk/base/: Logger.java
android/app/src/main/java/com/example/ytalk/db/: ChatDb.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/ytalk/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
server/: CMakeLists.txt
server/DBProxyServer/: CMakeLists.txt  DB.cpp  DB.h  Main.cpp  MySqlConn.cpp  MySqlConn.h  MySqlPool.cpp  MySqlPool.h  MySqlService.cpp  MySqlService.h  README.md  RedisConn.cpp  RedisConn.h  RedisPool.cpp  RedisPool.h  RedisService.cpp  RedisService.h  config.conf  db_proxy.conf  db_proxy_server.conf  main.cpp  makefile  table.sql
server/DBProxyServer/protobuf/: mysql.proto  redis.proto
server/DBProxyServer/test/: getMaxUserId.cpp  makefile  mysql_test.cpp  redis_test.cpp  register.cpp  test.conf
server/GateServer/: CMakeLists.txt  Channels.cpp  Channels.h  ConLogin.cpp  ConLogin.h  ConRoute.cpp  ConRoute.h  GateService.cpp  GateService.h  Main.cpp  UpStreamService.cpp  UpStreamService.h  gate_server.conf  gate_server_log.conf  makefile
server/GateServer/protobuf/: gate.proto  upstream.proto
server/GateServer/test/: makefile  test.conf  testForConLogin.cpp
server/IMServer/: CMakeLists.txt  ConRoute_im.cpp  ConRoute_im.h  IMService.cpp  IMService.h  Main.cpp  im_server.conf  makefile
server/IMServer/protobuf/: im.proto
server/LoginServer/: AccessMySql.cpp  AccessMySql.h  AccessRedis.cpp  AccessRedis.h  AuthService.cpp  AuthService.h  CMakeLists.txt  Channel.cpp  Channel.h  LoginService.cpp  LoginService.h  Main.cpp  README.md  Session.cpp  Session.h  Token.cpp  Token.h  login_server.conf  makefile
server/LoginServer/protobuf/: auth.proto  login.proto
server/LoginServer/test/: access_mysql_test.cpp  makefile  test.conf  testForFirstSend.cpp  testForLogin.cpp  testForNotify.cpp  testForRegister.cpp  testForServer.cpp
server/RouteServer/: BusinessSession.cpp  BusinessSession.h  CMakeLists.txt  GateSession.cpp  GateSession.h  Main.cpp  RouteService.cpp  RouteService.h  makefile  route_server.conf
server/RouteServer/protobuf/: route.proto
server/base/: AsyncLog.cpp  AsyncLog.h  Base64.h  CMakeLists.txt  Condition.h  ConfigParse.cpp  ConfigParse.h  Digest.h  Key.h  LogBuffer.h  LogFile.cpp  LogFile.h  Logging.cpp  Logging.h  Mutex.h  Signature.cpp  Signature.h  Time.cpp  Time.h  Token.h  makefile  structs.h
server/base/test/: base64.cpp  build.sh  config.conf  configParse.cpp  log.conf  log.cpp  makefile  time.cpp
server1/: CMakeLists.txt  tables.sql
server1/IMServer/: CacheManager.cpp  CacheManager.h  ChatService.cpp  ChatService.h  ChatSession.cpp  ChatSession.h  Main.cpp  Protocal.h  Session.cpp  Session.h  User.h  UserManager.cpp  UserManager.h
server1/base/: Base64.h  BinaryStream.cpp  BinaryStream.h  ConfigParse.cpp  ConfigParse.h  CountDownLatch.cpp  CountDownLatch.h  EventLoopThread.cpp  EventLoopThreadPool.cpp  EventLoopThreadPool.h  LogService.cpp  LogService.h  Logger.h  Singleton.h  ThreadUtils.cpp  ThreadUtils.h  TimeStamp.cpp  TimeStamp.h
server1/etc/: IMServer.conf
server1/mysql/: MysqlConn.cpp  MysqlConn.h  MysqlManager.cpp  MysqlManager.h
server1/netlib/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  CallBacks.h  Channel.cpp  Channel.h  Connector.cpp  Connector.h  EPoller.cpp  EPoller.h  Endian.h  EventLoop.cpp  EventLoop.h  EventLoopThread.h  InetAddress.cpp  InetAddress.h  Socket.cpp  Socket.h  SocketsOps.cpp  SocketsOps.h  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Timer.cpp  Timer.h  TimerId.h  TimerQueue.cpp  TimerQueue.h  Types.h
